<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/warningImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/warning"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/omschrijving" />

    <TextView
        android:id="@+id/titelRamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/arrow"
        android:layout_toRightOf="@+id/warningImage"
        android:textColor="@color/rood"
        android:textStyle="bold"
        android:text="@string/titelRamp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/laatsteUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titelRamp"
        android:layout_toLeftOf="@+id/arrow"
        android:layout_toRightOf="@+id/warningImage"
        android:textStyle="bold"
        android:textColor="@color/zwart"
        android:text="@string/laatsteUpdate"
        android:layout_marginBottom="@dimen/half_activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/omschrijving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laatsteUpdate"
        android:textColor="@color/zwart"
        android:layout_toLeftOf="@+id/arrow"
        android:layout_toRightOf="@+id/warningImage"
        android:text="@string/omschrijvingRamp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@drawable/arrow"
        android:layout_alignBottom="@+id/omschrijving"/>
</RelativeLayout>